feat: implement ui for asymmetric algorithms